# connect-sdk-rust

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENCE-APACHE  LICENSE-MIT  README.md  docker-compose.yaml
examples/: api_crediential_item.rs  login_item.rs
src/: client.rs  error.rs  items.rs  lib.rs  vaults.rs
src/models/: item.rs  mod.rs  vault.rs
