[package]
name = "connect-1password"
version = "3.0.0"
description = "Rust SDK for 1Password Connect"
readme = "README.md"
homepage = "https://github.com/bsodmike/connect-1password"
repository = "https://github.com/bsodmike/connect-1password"
license = "MIT"
authors = ["Michael de Silva <michael@inertialbox.com"]
keywords = ["1password", "connect"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "^0.4", features = ["serde"]}
dotenv = "^0.15"
env_logger = "^0.11"
exponential-backoff = "^1.0"
futures = "^0.3"
hyper = { version = "^0.14", features = ["full"] }
hyper-rustls = { version = "0.23", features = ["http1", "http2"] }
log = "0.4.16"
regex = "1.5.5"
rustls-native-certs = "^0.7"
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
tokio = {version = "^1.0", features = ["full"]}
uuid = {version = "0.8.2", features = ["serde", "v4"]}
async-trait = "^0.1"
